--- a/src/itemOut.fxml
+++ b/src/itemOut.fxml
@@ -20,8 +20,8 @@
                </font>
             </Label>
             <TextField fx:id="customerNameTf" layoutX="168.0" layoutY="11.0" prefWidth="400.0" />
-            <TextField fx:id="discountByAmountBahtTf" layoutX="168.0" layoutY="45.0" prefHeight="31.0" prefWidth="200.0" />
-            <TextField fx:id="discountByAmountBahtTf" layoutX="620.0" layoutY="44.0" prefHeight="31.0" prefWidth="200.0" />
+            <TextField fx:id="billIdTf" layoutX="168.0" layoutY="45.0" prefHeight="31.0" prefWidth="200.0" />
+            <TextField fx:id="bilDateTf" layoutX="620.0" layoutY="44.0" prefHeight="31.0" prefWidth="200.0" />
             <Label layoutX="14.0" layoutY="45.0" text="เลขที่ออกเอกสาร">
                <font>
                   <Font size="20.0" />
@@ -36,12 +36,12 @@
       </Pane>
       <TableView fx:id="table" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="433.0" prefWidth="1200.0">
         <columns>
-          <TableColumn prefWidth="167.0" text="รหัสสินค้า" />
-          <TableColumn prefWidth="178.0" text="ชื่อสินค้า" />
-            <TableColumn prefWidth="208.0" text="ราคาซื้อ / หน่วย" />
-            <TableColumn prefWidth="241.0" text="ราคาขาย / หน่วย" />
-            <TableColumn prefWidth="168.0" text="จำนวน" />
-            <TableColumn prefWidth="237.0" text="รวม ( บาท )" />
+          <TableColumn fx:id="itemIdTc" prefWidth="167.0" text="รหัสสินค้า" />
+          <TableColumn fx:id="itemNameTc" prefWidth="178.0" text="ชื่อสินค้า" />
+            <TableColumn fx:id="buyPriceTc" prefWidth="208.0" text="ราคาซื้อ / หน่วย" />
+            <TableColumn fx:id="sellPriceTc" prefWidth="241.0" text="ราคาขาย / หน่วย" />
+            <TableColumn fx:id="sellAmountTc" prefWidth="168.0" text="จำนวน" />
+            <TableColumn fx:id="itemTotalPriceTc" prefWidth="237.0" text="รวม ( บาท )" />
         </columns>
       </TableView>
       <Pane prefHeight="233.0" prefWidth="1200.0">
@@ -70,7 +70,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <RadioButton id="discountByAmountRb" layoutX="697.0" layoutY="53.0" mnemonicParsing="false" onAction="#setDiscountByBath" style="-fx-padding: 0;" text="หน่วยบาท">
+            <RadioButton id="discountByAmountRb" fx:id="discountByBathRb" layoutX="697.0" layoutY="53.0" mnemonicParsing="false" onAction="#setDiscountByBath" style="-fx-padding: 0;" text="หน่วยบาท">
                <font>
                   <Font size="20.0" />
                </font>
@@ -78,7 +78,7 @@
                   <ToggleGroup fx:id="discountRG" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton id="discountByPercentRb" layoutX="697.0" layoutY="94.0" mnemonicParsing="false" onAction="#setDiscountByPercent" style="-fx-padding: 0;" text="ร้อยละ" toggleGroup="$discountRG">
+            <RadioButton id="discountByPercentRb" fx:id="discountByPercentRb" layoutX="697.0" layoutY="94.0" mnemonicParsing="false" onAction="#setDiscountByPercent" style="-fx-padding: 0;" text="ร้อยละ" toggleGroup="$discountRG">
                <font>
                   <Font size="20.0" />
                </font>
@@ -118,11 +118,11 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="discountByAmountBahtTf" layoutX="980.0" layoutY="93.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField fx:id="discountByAmountBahtTf" layoutX="980.0" layoutY="135.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField fx:id="discountByAmountBahtTf" layoutX="980.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField id="discountByAmountBahtTf" fx:id="discountByAmountBahtTf" layoutX="716.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
-            <TextField fx:id="discountByAmountBahtTf" layoutX="980.0" layoutY="11.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField fx:id="discountByPercentBahtTf" layoutX="980.0" layoutY="93.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField fx:id="vattBahtTf" layoutX="980.0" layoutY="135.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField fx:id="profitTf" layoutX="980.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField id="discountByAmountBahtTf" fx:id="netPriceTf" layoutX="716.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
+            <TextField fx:id="priceTf" layoutX="980.0" layoutY="11.0" prefHeight="31.0" prefWidth="128.0" />
             <Label layoutX="1132.0" layoutY="55.0" text="บาท">
                <font>
                   <Font size="20.0" />
