--- a/src/itemIn.fxml
+++ b/src/itemIn.fxml
@@ -123,7 +123,7 @@
             <Font size="30.0" />
          </font>
       </Button>
-      <Button fx:id="deniedBtn" layoutX="909.0" layoutY="600.0" mnemonicParsing="false" onAction="#clearInput" prefHeight="40.0" prefWidth="248.0" text="ยกเลิก" />
+      <Button fx:id="deniedBtn" layoutX="909.0" layoutY="600.0" mnemonicParsing="false" onAction="#clearInput" prefHeight="40.0" prefWidth="248.0" text="ล้าง" />
       <StackPane layoutX="704.0" layoutY="53.0" maxHeight="255.0" maxWidth="410.0" prefHeight="255.0" prefWidth="410.0" style="-fx-alignment: CENTER;">
          <children>
             <ImageView fx:id="showImageIv" fitHeight="255.0" fitWidth="410.0" pickOnBounds="true" preserveRatio="true" />
