--- a/src/itemOut.fxml
+++ b/src/itemOut.fxml
@@ -84,8 +84,8 @@
                   <Font size="20.0" />
                </font>
             </RadioButton>
-            <TextField fx:id="discountByBahtTf" layoutX="980.0" layoutY="52.0" onKeyPressed="#validateDiscountByBahtTextField" prefHeight="31.0" prefWidth="128.0" text="0.0" />
-            <TextField fx:id="discountByPercentTf" layoutX="808.0" layoutY="93.0" onKeyPressed="#validateDiscountByPercentTextField" prefHeight="31.0" prefWidth="83.0" text="0" />
+            <TextField fx:id="discountByBahtTf" layoutX="980.0" layoutY="52.0" prefHeight="31.0" prefWidth="128.0" text="0" />
+            <TextField fx:id="discountByPercentTf" layoutX="808.0" layoutY="93.0" prefHeight="31.0" prefWidth="83.0" text="0" />
             <Label layoutX="908.0" layoutY="92.0" text="เป็นเงิน">
                <font>
                   <Font size="20.0" />
@@ -96,7 +96,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="vatTf" layoutX="808.0" layoutY="136.0" onKeyPressed="#validateVatTextField" prefHeight="31.0" prefWidth="83.0" text="7" />
+            <TextField fx:id="vatTf" layoutX="808.0" layoutY="136.0" prefHeight="31.0" prefWidth="83.0" text="0" />
             <Label layoutX="908.0" layoutY="136.0" text="เป็นเงิน">
                <font>
                   <Font size="20.0" />
@@ -119,7 +119,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="discountByPercentBahtTf" editable="false" layoutX="980.0" layoutY="93.0" prefHeight="31.0" prefWidth="128.0" text="0.0" />
+            <TextField fx:id="discountByPercentBahtTf" editable="false" layoutX="980.0" layoutY="93.0" prefHeight="31.0" prefWidth="128.0" text="0" />
             <TextField fx:id="vatBahtTf" editable="false" layoutX="980.0" layoutY="135.0" prefHeight="31.0" prefWidth="128.0" />
             <TextField fx:id="profitTf" editable="false" layoutX="980.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
             <TextField id="discountByAmountBahtTf" fx:id="netPriceTf" editable="false" layoutX="716.0" layoutY="177.0" prefHeight="31.0" prefWidth="128.0" />
