--- a/src/customer.fxml
+++ b/src/customer.fxml
@@ -18,6 +18,7 @@
             </Label>
             <TextField fx:id="customerNameTf" layoutX="180.0" layoutY="25.0" prefHeight="31.0" prefWidth="311.0" />
             <Button fx:id="searchBtn" layoutX="526.0" layoutY="25.0" mnemonicParsing="false" onAction="#searchCustomer" prefHeight="31.0" prefWidth="102.0" text="ค้นหา" />
+            <Button fx:id="clearBtn" layoutX="1075.0" layoutY="25.0" mnemonicParsing="false" onAction="#clearInput" prefHeight="31.0" prefWidth="95.0" text="ล้าง" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
