--- a/src/stat.fxml
+++ b/src/stat.fxml
@@ -60,7 +60,7 @@
           <CategoryAxis side="BOTTOM" fx:id="xAxis" />
         </xAxis>
         <yAxis>
-          <NumberAxis fx:id="yAxis" prefHeight="519.0" prefWidth="32.0" side="LEFT" />
+          <NumberAxis fx:id="yAxis" forceZeroInRange="false" prefHeight="509.0" prefWidth="32.0" side="LEFT" />
         </yAxis>
       </LineChart>
       <Label layoutX="48.0" layoutY="65.0" text="บาท" />
