--- a/src/itemOut.fxml
+++ b/src/itemOut.fxml
@@ -20,7 +20,7 @@
                </font>
             </Label>
             <TextField fx:id="customerNameTf" layoutX="168.0" layoutY="11.0" prefWidth="400.0" />
-            <TextField fx:id="billIdTf" layoutX="168.0" layoutY="45.0" prefHeight="31.0" prefWidth="200.0" />
+            <TextField fx:id="billIdTf" editable="false" layoutX="168.0" layoutY="45.0" prefHeight="31.0" prefWidth="200.0" />
             <TextField fx:id="billDateTf" editable="false" layoutX="620.0" layoutY="44.0" prefHeight="31.0" prefWidth="200.0" />
             <Label layoutX="14.0" layoutY="45.0" text="เลขที่ออกเอกสาร">
                <font>
